app/assets/stylesheets/url_new.css
.center {
  margin: 0 auto;
  text-align: center;
}

.vertical-center {
  position: relative;
  top: 43%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

#shorten-form,
#top-100 {
  margin-top: 65px;
}

span.form-addon {
  font-size: 18px;
}

.title {
  padding-bottom: 25px;
  font-weight: bolder;
}

#shorten-title {
  font-size: 60px;
  color: #ecf0f1;
}

#ranking-title {
  color: #2c3e50;
}

.shorten-background {
  background: #3498db;
  height: calc(100vh - 50px);
}

.ranking-background {
  background: white;
  min-height: 100vh;
}

.form-button {
  width: 104px;
  height: 54px;
  border-top-right-radius: 6px !important;
  border-bottom-right-radius: 6px !important;
}

.hide {
  display: none;
}

*.no-b-radius {
  border-radius: 0px;
}

.no-b {
  border: none;
}

